--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "@adonisjs/session": "^6.0.0",
     "@adonisjs/shield": "^7.0.0",
     "@adonisjs/view": "^6.0.0",
+    "@octokit/rest": "^18.6.0",
+    "cheerio": "^1.0.0-rc.10",
+    "got": "^11.8.2",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19"
