--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@adonisjs/shield": "^7.0.0",
     "@adonisjs/view": "^6.0.0",
     "@octokit/rest": "^18.6.0",
+    "adonis5-swagger": "^1.2.3",
     "cheerio": "^1.0.0-rc.10",
     "got": "^11.8.2",
     "proxy-addr": "^2.0.7",
