--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "node ace build --production",
-    "postbuild": "node ace swagger:generate && cp -a docs/ build/docs",
+    "postbuild": "node ace swagger:generate && cp -a docs/swagger.json public",
     "start": "node server.js",
     "dev": "node ace serve --watch",
     "lint": "eslint . --ext=.ts",
